Revision history for Date-Range

0.07
	Use Test::Which

0.06	Tue Nov 25 21:52:23 EST 2025
	Added test dashboard
	Added Appveyor integration
	Added sanity test

0.05	Tue Nov 25 19:33:25 EST 2025
	Fixed ymd code (WillWills - https://github.com/nigelhorne/Date-Age/pull/1)
	Added fuzz testing
	Bump minimum version

0.04	Mon Nov 17 21:33:22 EST 2025
	Added bin/date-age
	Fixed is_leap logic
	Added date sanity tests
	Added GitHub Actions test flow
	Use Time::Local instead of Time::Piece for performance

0.03	Thu May 29 21:00:00 EDT 2025
	Fix pre-requisites

0.02	Wed May 28 20:35:05 EDT 2025
	Use gtar for the dist

0.01	Wed May 28 20:30:58 EDT 2025
        First draft