@@ -2,6 +2,7 @@ Revision history for Date-Range
 
 0.07
 	Use Test::Which
+	Properly document the public methods
 
 0.06	Tue Nov 25 21:52:23 EST 2025
 	Added test dashboard
